# python-meegkit

./: .buildinfo  .coveragerc  .gitignore  .mailmap  .travis.yml  LICENSE  Makefile  README.md  citation.cff  denoise.py  dss.py  environment.yml  example.py  example5.py  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  sns.py  tspca.py
.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: example_asr.doctree  example_asr_calibration_sensitivity.doctree  example_dering.doctree  example_detrend.doctree  example_dss.doctree  example_dss_line.doctree  example_echt.doctree  example_mcca.doctree  example_mcca_2.doctree  example_phase_estimation.doctree  example_ress.doctree  example_star.doctree  example_star_dss.doctree  example_trca.doctree  index.doctree  run_all_notebooks.doctree  sg_execution_times.doctree
.doctrees/modules/: meegkit.asr.doctree  meegkit.cca.doctree  meegkit.detrend.doctree  meegkit.dss.doctree  meegkit.lof.doctree  meegkit.phase.doctree  meegkit.ress.doctree  meegkit.sns.doctree  meegkit.star.doctree  meegkit.trca.doctree  meegkit.tspca.doctree  meegkit.utils.doctree
.github/workflows/: deploy_ghpages.yml  documentation.yml  pythonpackage.yml  testing.yml
_downloads/12249a2c389fa906a19c26e2a6d00a77/: example_phase_estimation.ipynb
_downloads/127999bfe25ff667ca6d2d8ac8525a33/: example_dss_line.ipynb
_downloads/1d7c08ebfaa26dd44535867493fad39a/: example_star_dss.py
_downloads/22a83c59bf23910872ecdf61ccc22837/: example_dss.ipynb
_downloads/27c1c550cb31d1ab8fed8c541c1a9d18/: example_trca.ipynb
_downloads/28b33982c5b13762d940bf0a63a727dd/: example_mcca_2.py
_downloads/2fbd87c3c21a32725b35b241ad00fa82/: example_dss.py
_downloads/3dc25fc043639dac49acf03c9eef166d/: example_asr_calibration_sensitivity.ipynb
_downloads/4a1fa93a84954ee5075d8ae3f5b30c65/: example_asr.ipynb
_downloads/4c7b63976d87d6a240d8b1f5af892449/: example_detrend.py
_downloads/54781cb13fb487be0822f834f1370cdd/: example_detrend.ipynb
_sources/: index.rst.txt  sg_execution_times.rst.txt
auto_examples/: example_asr.html  example_asr_calibration_sensitivity.html  example_dering.html  example_detrend.html  example_dss.html  example_dss_line.html  example_echt.html  example_mcca.html  example_mcca_2.html  example_phase_estimation.html  example_ress.html  example_star.html  example_star_dss.html  example_trca.html  index.html  run_all_notebooks.html  sg_execution_times.html
denoise/: denoise.py  dss.py  sns.py
doc/: Makefile  conf.py  examples.rst  index.rst  requirements.txt  sg_execution_times.rst
examples/: README.rst  config.py  example.py  example_asr.ipynb  example_asr.py  example_asr_calibration_sensitivity.ipynb  example_asr_calibration_sensitivity.py  example_dering.ipynb  example_dering.py  example_detrend.ipynb  example_detrend.py  example_dss.ipynb  example_dss.py  example_dss_line.ipynb  example_dss_line.py  example_echt.ipynb  example_echt.py  example_mcca.ipynb  example_mcca.py  example_mcca_2.ipynb  example_mcca_2.py  example_phase_estimation.ipynb  example_phase_estimation.py  example_ress.ipynb  example_ress.py  example_star.ipynb  example_star.py  example_star_dss.ipynb  example_star_dss.py  example_trca.ipynb  example_trca.py  example_trca.py.py
meegkit/: __init__.py  asr.py  cca.py  detrend.py  dss.py  dss_zapline.py  lof.py  phase.py  ress.py  sns.py  star.py  trca.py  tspca.py
modules/: meegkit.asr.html  meegkit.cca.html  meegkit.detrend.html  meegkit.dss.html  meegkit.lof.html  meegkit.phase.html  meegkit.ress.html  meegkit.sns.html  meegkit.star.html  meegkit.trca.html  meegkit.tspca.html  meegkit.utils.html
tests/: conftest.py  context.py  test_asr.py  test_buffer.py  test_cca.py  test_coherence.py  test_cov.py  test_detrend.py  test_dss.py  test_filters.py  test_lof.py  test_nt_cca.py  test_pyriemann_imports.py  test_ress.py  test_signal.py  test_sns.py  test_star.py  test_trca.py  test_tspca.py  test_utils.py
trca/: filterbank.py  itr.py  main.py  test_trca.py  train_trca.py  trca.py  utils.py
(+80 files in other folders)
